django-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notes-app-deployment
  labels:
    app: notes-app
  namespace: notes-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notes-app

  template:
    metadata:
      labels:
        app: notes-app

    spec:
      containers:
      - name: notes-app
        image: suchithk/project-1:latest

        ports:
        - containerPort: 8000
