nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: notes-app
  labels:
    app: template

spec:
  replicas: 1

  selector:
    matchLabels:
      app: template

  template:
    metadata:
      labels:
        app: template

    spec:
      containers:
      - name: nginx-container
        image: nginx:latest

        ports:
        - containerPort: 80
