nginx-service.yml
apiVersion: v1
kind: Service

metadata:
  name: template-service
  namespace: notes-app

spec:
  selector:
    app: template

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
